// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders 1`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquareMinus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt (2)
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
    <div
      class="reports-group-content"
    >
      <div
        data-reportid="one"
        data-testid="report-item"
      />
      <div
        data-reportid="two"
        data-testid="report-item"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders 2`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquarePlus"
          data-testid="font-awesome-icon"
        />
      </div>
      <div
        class="reports-group-filetype-icon"
      >
        <div
          data-icon="faFileLines"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders solid icon on hover 1`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquarePlus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders solid icon on hover 2`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquarePlus-solid"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders solid icon on hover 3`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquarePlus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders solid icon on hover 4`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquareMinus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
    <div
      class="reports-group-content"
    >
      <div
        data-reportid="one"
        data-testid="report-item"
      />
      <div
        data-reportid="two"
        data-testid="report-item"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders solid icon on hover 5`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquareMinus-solid"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
    <div
      class="reports-group-content"
    >
      <div
        data-reportid="one"
        data-testid="report-item"
      />
      <div
        data-reportid="two"
        data-testid="report-item"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders solid icon on hover 6`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquareMinus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
    <div
      class="reports-group-content"
    >
      <div
        data-reportid="one"
        data-testid="report-item"
      />
      <div
        data-reportid="two"
        data-testid="report-item"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`triggers expansion 1`] = `
<DocumentFragment>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-one.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquarePlus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-one.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
  </div>
  <div
    class="reports-group"
  >
    <div
      class="reports-group-header"
      data-testid="reports-group-test-file-two.txt-header"
    >
      <div
        class="reports-group-toggle"
      >
        <div
          data-icon="faSquareMinus"
          data-testid="font-awesome-icon"
        />
      </div>
      <span
        class="reports-group-title"
      >
        test-file-two.txt
      </span>
      <span
        class="reports-group-count"
      >
        (2)
      </span>
    </div>
    <div
      class="reports-group-content"
    >
      <div
        data-reportid="three"
        data-testid="report-item"
      />
      <div
        data-reportid="four"
        data-testid="report-item"
      />
    </div>
  </div>
</DocumentFragment>
`;
